AA-2006-11-23-0: Enhancem:  move of arco testsuite checktree to testsuite subproject
                
CR-2006-11-23-2: Cleanup:   modified migrate test to always to the heartbeat
                            test in runlevel 0 - report exactly one warning
                            if no second shadowd is set for other levels
                 Review:    RD

CR-2006-11-23-1: Bugfix:    Fixed some testsuite tests:
                 Review:    RD

JG-2006-11-23-0: Enhancem.: For compiling java sources, create the file
                            build_testsuite.properties containing build host
                            and sge_root directory.
                 Bugfix:    qconf test needs root access, but didn't request it.
                 Cleanup:   bugs/issuezilla/1270.
                 Review:    AA

CR-2006-11-22-0: Bugfix:    fixed consumable_resources test
                 Review:    RD

RD-2006-11-20-0: Bugfix:    fixed some issues introduced by resource quota
                            renaming
                 Review:    AA

RD-2006-11-17-0: Cleanup:   renamed limitation rule sets to resource quota sets
                 Review:    AA

CR-2006-11-16-0: Bugfix:    - fixed error in thight_integration check when
                              unexpected output from login scripts is printed
                 Review:    RD

RD-2006-11-16-0: Enhancem.: - enhanced clients/qlimit test
                            - fixed scheduler/resource_quota test
                            - disabled warnings in scheduler/tickets test
                 Review:    JG 

HP-2006-11-15-0: Bugfix:    Renamed file backslash_space_queue19. to
                            backslash_space_queue19

RD-2006-11-10-0: Enhancem.: Enhanced tests for limitation rule sets
                            - added new test
                              system_tests/scheduler/resource_quota
                            - added Xattr test in clients/qconf