@@ -1,3 +1,6 @@
+CR-2006-11-24-0: Enhancem:  del_pe now supports raise_error 
+                 Review:    RD
+
 AA-2006-11-23-0: Enhancem:  move of arco testsuite checktree to testsuite subproject
                 
 CR-2006-11-23-2: Cleanup:   modified migrate test to always to the heartbeat
